Remove uses of new Integer()
Instead of using `new Integer()` to construct Integer instances, use
`Integer.valueOf()` which uses a cache to prevent re-instantiation of
Integer instances where necessary.

Bug: 568048
Change-Id: Ic5cbba63c04efb6410af186ead039b4051f04c83
Signed-off-by: Alex Blewitt <alex.blewitt@gmail.com>