@@ -81,13 +81,13 @@ public class SSLGenericContainerInstantiator implements IContainerInstantiator, 
 
 	protected Integer getIntegerFromArg(Object arg) {
 		if (arg == null)
-			return new Integer(-1);
+			return Integer.valueOf(-1);
 		if (arg instanceof Integer)
 			return (Integer) arg;
 		else if (arg instanceof String) {
-			return new Integer((String) arg);
+			return Integer.valueOf((String) arg);
 		} else
-			return new Integer(-1);
+			return Integer.valueOf(-1);
 	}
 
 	protected class GenericContainerArgs {
@@ -184,7 +184,7 @@ public class SSLGenericContainerInstantiator implements IContainerInstantiator, 
 		if (newID == null)
 			newID = IDFactory.getDefault().createStringID(IDFactory.getDefault().createGUID().getName());
 		if (ka == null)
-			ka = new Integer(0);
+			ka = Integer.valueOf(0);
 		return new GenericContainerArgs(newID, ka);
 	}
 
@@ -279,7 +279,7 @@ public class SSLGenericContainerInstantiator implements IContainerInstantiator, 
 			newID = IDFactory.getDefault().createStringID(SSLServerSOContainer.DEFAULT_PROTOCOL + "://" + SSLServerSOContainer.DEFAULT_HOST + ":" + port + SSLServerSOContainer.DEFAULT_NAME);//$NON-NLS-1$ //$NON-NLS-2$
 		}
 		if (ka == null)
-			ka = new Integer(SSLServerSOContainer.DEFAULT_KEEPALIVE);
+			ka = Integer.valueOf(SSLServerSOContainer.DEFAULT_KEEPALIVE);
 
 		// Check for private intent
 		if (privateIntent)
