@@ -531,7 +531,7 @@ public class HttpClientRetrieveFileTransfer extends AbstractRetrieveFileTransfer
 				if (o instanceof Integer) {
 					result = ((Integer) o).intValue();
 				} else if (o instanceof String) {
-					result = new Integer(((String) o)).intValue();
+					result = Integer.parseInt(((String) o));
 				}
 				return result;
 			}
@@ -540,7 +540,7 @@ public class HttpClientRetrieveFileTransfer extends AbstractRetrieveFileTransfer
 				if (o instanceof Integer) {
 					result = ((Integer) o).intValue();
 				} else if (o instanceof String) {
-					result = new Integer(((String) o)).intValue();
+					result = Integer.parseInt(((String) o));
 				}
 			}
 		}
@@ -561,7 +561,7 @@ public class HttpClientRetrieveFileTransfer extends AbstractRetrieveFileTransfer
 				if (o instanceof Integer) {
 					result = ((Integer) o).intValue();
 				} else if (o instanceof String) {
-					result = new Integer(((String) o)).intValue();
+					result = Integer.parseInt(((String) o));
 				}
 				return result;
 			}
@@ -570,7 +570,7 @@ public class HttpClientRetrieveFileTransfer extends AbstractRetrieveFileTransfer
 				if (o instanceof Integer) {
 					result = ((Integer) o).intValue();
 				} else if (o instanceof String) {
-					result = new Integer(((String) o)).intValue();
+					result = Integer.parseInt(((String) o));
 				}
 			}
 		}
@@ -667,7 +667,7 @@ public class HttpClientRetrieveFileTransfer extends AbstractRetrieveFileTransfer
 			} else {
 				Trace.trace(Activator.PLUGIN_ID, EntityUtils.toString(httpResponse.getEntity()));
 				//				EntityUtils.consume(httpResponse.getEntity());
-				throw new IncomingFileTransferException(NLS.bind(Messages.HttpClientRetrieveFileTransfer_ERROR_GENERAL_RESPONSE_CODE, new Integer(code)), code);
+				throw new IncomingFileTransferException(NLS.bind(Messages.HttpClientRetrieveFileTransfer_ERROR_GENERAL_RESPONSE_CODE, Integer.valueOf(code)), code);
 			}
 		} catch (final Exception e) {
 			Trace.throwing(Activator.PLUGIN_ID, DebugOptions.EXCEPTIONS_THROWING, this.getClass(), "openStreams", e); //$NON-NLS-1$
@@ -907,7 +907,7 @@ public class HttpClientRetrieveFileTransfer extends AbstractRetrieveFileTransfer
 				throw new IncomingFileTransferException(Messages.HttpClientRetrieveFileTransfer_Proxy_Auth_Required, code, responseHeaders);
 			} else {
 				EntityUtils.consume(httpResponse.getEntity());
-				throw new IncomingFileTransferException(NLS.bind(Messages.HttpClientRetrieveFileTransfer_ERROR_GENERAL_RESPONSE_CODE, new Integer(code)), code, responseHeaders);
+				throw new IncomingFileTransferException(NLS.bind(Messages.HttpClientRetrieveFileTransfer_ERROR_GENERAL_RESPONSE_CODE, Integer.valueOf(code)), code, responseHeaders);
 			}
 			Trace.exiting(Activator.PLUGIN_ID, DebugOptions.METHODS_EXITING, this.getClass(), "openStreamsForResume", Boolean.TRUE); //$NON-NLS-1$
 			return true;
