@@ -46,7 +46,7 @@ public class SSLRemoteServiceTrackerTest extends AbstractRemoteServiceTest {
 	}
 
 	protected String getServerIdentity() {
-		return NLS.bind(SSLGeneric.HOST_CONTAINER_ENDPOINT_ID, new Integer(genericServerPort));
+		return NLS.bind(SSLGeneric.HOST_CONTAINER_ENDPOINT_ID, Integer.valueOf(genericServerPort));
 	}
 
 	protected String getServerContainerName() {
