@@ -54,7 +54,7 @@ public abstract class AbstractConcatHostApplication implements IApplication {
 			while (!done)
 				wait();
 		}
-		return new Integer(0);
+		return Integer.valueOf(0);
 	}
 
 
